[package]
name = "repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-format = { version = "0.6.0", features = ["flight-data", "flight-service"]}
arrow2 = { version = "0.13.1", features = ["io_flight"] }
futures = "0.3.24"
tokio = { version = "1.21.0", features = ["full"] }
tonic = "0.8.1"
tower = "0.4.13"
